<resources>
    <string name="app_name">NervousFish</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="exponent">Exponent</string>
    <string name="logo">Logo</string>
    <string name="modulus">Modulus</string>
    <string name="more">More</string>
    <string name="name">Name</string>
    <string name="nfc">NFC</string>
    <string name="no">No</string>
    <string name="paired_devices">Paired devices</string>
    <string name="password">Password</string>
    <string name="qr">QR</string>
    <string name="qr_code">QR code</string>
    <string name="rsa_key">RSA key</string>
    <string name="ed25519_key">(Ed)DSA - ED25519</string>
    <string name="save">Save</string>
    <string name="scanning">Scanning…</string>
    <string name="select_device">Select device</string>
    <string name="submit">Submit</string>
    <string name="type">Type</string>
    <string name="yes">Yes</string>
    <string name="dash" translatable="false">-</string>
    <string name="iban">IBAN</string>
    <string name="info">Info</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="discovered_devices">Discovered devices</string>
    <string name="get_started">Get started!</string>
    <string name="go_back">Go back</string>
    <string name="invalid_name">Invalid name</string>
    <string name="invalid_iban">Invalid IBAN</string>
    <string name="key_type">Key type: %1$s</string>
    <string name="no_devices_found">No devices found…</string>
    <string name="remember_my_choice">Remember my choice</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="try_again">Please try again.</string>
    <string name="waiting_for_partner">Waiting for partner…</string>
    <string name="your_device_name_is">Device name: "%1$s"</string>
    <string name="visual_verification_explanation">Tap 6 times in the same order on objects as your partner</string>
    <string name="welcome_title">Welcome to NervousFish</string>
    <string name="welcome_subtitle">NervousFish is an app to securely manage and exchange your public keys</string>
    <string name="create_profile_message">Let\'s create your profile</string>
    <string name="keys_to_generate">Keys to generate:</string>
    <string name="profile_created_title">Profile created</string>
    <string name="profile_created_explanation">Your profile is successfully created.</string>
    <string name="profile_not_created_title">Can\'t create profile</string>
    <string name="create_proflie_too_short_password">The password is too short, it should contain at least 6 characters</string>
    <string name="create_profile_empty_password">You must select a password!</string>
    <string name="create_profile_empty_name">You must select a name.</string>
    <string name="create_profile_error_adding_to_database">Error while adding profile to database</string>
    <string name="create_profile_passwords_not_equal">Please make sure you typed the same password twice.</string>
    <string name="create_profile_all_fields_empty">Please fill in the fields</string>
    <string name="create_profile_invalid_iban">The IBAN number is invalid, please enter a valid one.</string>
    <string name="name_create_profile">Name*</string>
    <string name="repeat_password">Repeat password*</string>
    <string name="password_create_profile">Password*</string>
    <string name="use_existing_keypair">Use existing keypair</string>
    <string name="enter_public_key">Enter your public key:</string>
    <string name="enter_private_key">Enter your private key:</string>
    <string name="enter_public_key_too_short">The key is too short!\nEnter your public key:</string>
    <string name="enter_private_key_too_short">The key is too short!\nEnter your private key:</string>
    <string name="choose_your_keytype">Choose the type of your current keypair:</string>
    <string name="not_yet_implemented">Feature not yet implemented</string>
    <string name="custom_ed25519_key_not_yet_implemented">Providing your custom ED25519 key is not possible yet.</string>
    <string name="rsa_key_info">RSA is the most used encryption algorithm\n  - Excellent default choice\n   -  Consists of a modulus and an exponent, two very large prime numbers\n   -  The generated keys are 256 characters</string>
    <string name="ed25519_key_info">EdDSA is a relatively new but promising encryption algorithm\n   -  Both faster and safer than RSA\n  - Uses an elliptic curve to determine a public and private key\n   -  The generated keys are 512 characters</string>
    <string name="custom_key_info">If you\'re already using an RSA or EdDSA key, you can use it in NervousFish by selecting \"Use existing keypair\"</string>
    <string name="contact_added_popup_title">Successfully received!</string>
    <string name="contact_added_popup_explanation">The exchange was successful and the new contact is added to the list.</string>
    <string name="popup_log_out_title">Log out?</string>
    <string name="popup_log_out_description">Are you sure you want to log out?</string>
    <string name="popup_enable_bluetooth_title">Enable Bluetooth?</string>
    <string name="popup_enable_bluetooth_findable">Enable Bluetooth so others can find your device</string>
    <string name="popup_enable_bluetooth_exchange">You must enable Bluetooth before continuing</string>
    <string name="your_contacts_list_is_empty">Your contacts list is empty</string>
    <string name="login_message">Enter your password below</string>
    <string name="login_password_mismatch">Your password is wrong</string>
    <string name="delete_popup_no_recovery">You won\'t be able to recover this contact!</string>
    <string name="yes_delete">Yes, delete it!</string>
    <string name="go_back_changes_lost">Your changes will be lost</string>
    <string name="yes_go_back">Yes, go back</string>
    <string name="invalid_name_explanation">The new name you entered is invalid, it can\'t be all whitespaces or empty.</string>
    <string name="contact_deleted_title">Deleted!</string>
    <string name="contact_deleted_description">The contact has been deleted!</string>
    <string name="contact_doesnt_exist">The contact doesn\'t exist</string>
    <string name="contact_already_deleted">It looks like the contact was already deleted.</string>
    <string name="contact_information">Contact information:</string>
    <string name="contact_public_keys">Public keys:</string>
    <string name="invalid_iban_explanation">The IBAN entered is invalid, please use a real one. Also make sure the letters are capitalized.</string>
    <string name="iban_verified">IBAN verified</string>
    <string name="tap_me">Tap me!</string>
    <string name="stop_recording">Stop recording</string>
    <string name="start_recording">Start recording</string>
    <string name="too_few_taps_title">Too few taps</string>
    <string name="too_few_taps_description">You have to tap at least 3 times</string>
    <string name="contact_image">Contact image</string>
    <string name="contact_already_exists">Contact already exists</string>
    <string name="contact_exists_nothing_done">A contact with the same name and keys exists already, so adding the same contact "%1$s" again was not needed</string>
    <string name="not_the_same_rhythm_title">Rhythm was not the same</string>
    <string name="not_the_same_rhythm_explanation">The rhythm you tapped was not the same as on the other device.</string>
    <string name="not_the_same_visual_title">Tapping order was the same</string>
    <string name="not_the_same_visual_explanation">Make sure that the locations tapped and the order are the same on both devices.</string>
    <string name="rhythm_explanation">Press \"Start recording\" and tap the same rhythm as your partner</string>
    <string name="select_verification_method">How do you want to secure your connection?</string>
    <string name="select_visual_verification">Visual pattern</string>
    <string name="select_rhythm_verification">Tap a rhythm</string>
    <string name="unknown_verification_method_title">Oops…</string>
    <string name="unknown_verification_method_description">Something went wrong, please try again</string>
    <string name="by_tapping_a_rhythm">By tapping a rhythm</string>
    <string name="by_tapping_on_an_image">By tapping on a few images</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="something_went_wrong_QR_popup_explanation">Something went wrong while scanning the QR code, please try again.</string>
    <string name="wait_message_slave_verification_method">Waiting for the other device to choose a verification method…</string>
    <string name="wait_message_partner_tapping">Waiting for your partner to finish tapping…</string>
    <string name="nfc_image_description">This should be a gif representing the use of NFC.</string>
    <string name="nfc_explanation">Please bring your device as close as possible to another device you want to exchange keys with.</string>
    <string name="popup_enable_nfc_title">Enable NFC?</string>
    <string name="popup_enable_nfc_settings">Please activate NFC and press Back to return to the application!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="content_description_settings_button">Settings button three dots</string>
    <string name="pref_header_general">General</string>
    <string name="pref_verification_method_to_use">Verification method to use</string>
    <string name="pref_header_profile">Profile information</string>
    <string name="display_name">Display name</string>
    <string name="pref_key_management_header">Key management</string>
    <string name="pref_iban_sign_header">IBAN verification + signing</string>
    <string name="iban_challenge">Copy the challenge here</string>
    <string name="iban_generate_key_hint">This response will be automatically copied to clipboard</string>
    <string name="sign_generate">Generate</string>
    <string name="iban_challenge_start">Let\'s verify the challenge!</string>
    <string name="iban_string">IBAN of the challenger</string>
    <string name="iban_verification_activity_title">IBAN verification</string>
    <string name="iban_verification_explanation">To verify that his/her iban is correct, you must transfer 1 cent to his/her bank account and he/she back to yours.</string>
    <string name="iban_manual_verification">Manual verification</string>
    <string name="iban_bunq_verification">Bunq verification</string>
    <string name="contact_to_verify">Contact to verify:</string>
    <string name="iban_first_step">First step</string>
    <string name="iban_second_step">Second step</string>
    <string name="iban_third_step">Third step</string>
    <string name="iban_first_step_explanation">First you\'ll send your contact a challenge.\nClick manual if the bank account is not from the Bunq bank</string>
    <string name="iban_second_step_explanation">Now your contact will sign this challenge with his private key.\n This button can be found in the main screen menu!</string>
    <string name="iban_third_step_explanation">After he sends you his response, you can fill it in below to finish</string>
    <string name="iban_button_in_main_screen">The other person can accept your challenge in Main Screen -> Menu -> IBAN Challenge</string>
    <string name="please_note">Please note</string>
    <string name="manual_verification_explanation">To send your contact the challenge, you have to transfer a small amount of money from your bank account to his/her account.\n\n</string>
    <string name="account_holder">Account holder:</string>
    <string name="transfer_description">Transfer description:</string>
</resources>