<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.nervousfish.nervousfish.activities.MainActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/tap_screen_rhythm_activity"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:background="@drawable/ripple_effect"
        android:text="@string/tap_me"
        android:textColor="@color/color_accent"
        android:onClick="onTapClick"/>

    <Button
        android:id="@+id/start_recording_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/ok_green"
        android:text="@string/start_recording"
        android:textColor="@color/white"
        android:onClick="onStartRecordingClick" />

    <Button
        android:id="@+id/done_tapping_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/color_accent"
        android:text="@string/done"
        android:textColor="@color/white"
        android:visibility="gone"
        android:onClick="onDoneCreatingRhythmClick"/>

    <Button
        android:id="@+id/stop_recording_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/red_alert"
        android:text="@string/stop_recording"
        android:textColor="@color/white"
        android:visibility="gone"
        android:onClick="onStopRecordingClick"/>

</LinearLayout>
