<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sea_at_night">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_message"
            android:textSize="@dimen/enter_password_text_size" />

        <TextView
            android:id="@+id/error_message_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/error_password_margin_top"
            android:gravity="center"
            android:text="@string/login_password_mismatch"
            android:textColor="@android:color/holo_red_light"
            android:textSize="@dimen/error_password_text_size"
            android:visibility="gone" />

        <EditText
            android:id="@+id/login_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/field_margin_right"
            android:layout_marginStart="@dimen/field_margin_left"
            android:layout_marginTop="@dimen/enter_password_field_margin_top"
            android:hint="@string/password"
            android:imeOptions="actionSend"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/submit"
            android:layout_width="@dimen/submit_password_width"
            android:layout_height="@dimen/submit_password_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/submit_password_margin_top"
            android:background="@color/color_primary"
            android:gravity="center"
            android:onClick="validateLoginAttempt"
            android:text="@string/submit"
            android:textSize="@dimen/submit_password_text_size" />
    </LinearLayout>

    <include layout="@layout/custom_keyboard" />
</RelativeLayout>
