<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sea_at_night">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/large_logo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/first_use_logo_height"
            android:layout_gravity="center"
            android:contentDescription="@string/logo"
            android:src="@drawable/large_logo_with_shadow" />

        <TextView
            android:id="@+id/welcome_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/welcome_message_padding_top"
            android:text="@string/welcome_title"
            android:textSize="@dimen/welcome_message_size" />

        <View
            android:layout_width="@dimen/first_use_divider_width"
            android:layout_height="@dimen/general_divider_height"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/first_use_divider_margin_top"
            android:background="@color/color_accent"/>

        <TextView
            android:layout_width="@dimen/welcome_message_subpart_width"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/welcome_message_subpart_margin_top"
            android:text="@string/welcome_subtitle"
            android:textSize="@dimen/welcome_message_subpart_size" />

        <Button
            android:id="@+id/get_started"
            android:layout_width="@dimen/submit_password_width"
            android:layout_height="@dimen/submit_password_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/submit_password_margin_top"
            android:background="@color/color_primary"
            android:gravity="center"
            android:onClick="onGetStartedClick"
            android:text="@string/get_started"
            android:textSize="@dimen/get_started_text_size" />
    </LinearLayout>
</ScrollView>
