<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_login"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/holo_blue_dark">

            <TextView
                android:id="@+id/toolbar_title_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textSize="@dimen/toolbar_title_size"
                android:textStyle="bold" />
        </android.support.v7.widget.Toolbar>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/enter_password_padding_top"
            android:text="@string/login_message"
            android:textSize="@dimen/enter_password_text_size" />

        <TextView
            android:id="@+id/error_message_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/error_password_margin_top"
            android:gravity="center"
            android:textColor="@android:color/holo_red_light"
            android:textSize="@dimen/error_password_text_size"
            android:text="@string/login_password_mismatch"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/login_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/enter_password_field_margin_top"
            android:layout_marginStart="@dimen/field_margin_left"
            android:layout_marginEnd="@dimen/field_margin_right"
            android:hint="@string/password"
            android:imeOptions="actionSend"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/submit"
            android:layout_width="@dimen/submit_password_width"
            android:layout_height="@dimen/submit_password_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/submit_password_margin_top"
            android:background="@color/color_primary"
            android:gravity="center"
            android:onClick="validateLoginAttempt"
            android:text="@string/submit"
            android:textSize="@dimen/submit_password_text_size" />
    </LinearLayout>

    <android.inputmethodservice.KeyboardView
        android:id="@+id/keyboardview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="gone"
        android:keyBackground="@drawable/key_background"
        android:keyTextColor="#333"
        android:background="@color/color_primary"
        android:keyTextSize="22sp"/>
</RelativeLayout>
